--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "require": {
     "mustache/mustache": "~2.1",
     "vierbergenlars/php-semver": "3.0.0-rc2",
-    "textalk/php-sai": "1.0"
+    "textalk/php-sai": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
